// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueas en el GifGrid Debe mostra items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    Pokemon
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualqueira.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueas en el GifGrid Mostrar correctamente GifGrid 1`] = `
<Fragment>
  <h3>
    Pokemon
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
